--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Gémesi Olívia Resume</title>
     <meta charset="utf-8">   
-    <link rel="stylesheet" type="text/css" href=main.css"> 
+    <link rel="stylesheet" type="text/css" href="main.css"> 
     <link https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,100&display=swap>
   </head>
 
