--- a/pluszegy.html
+++ b/pluszegy.html
@@ -10,7 +10,7 @@
 	 	<body>
 		  	<header>
 		  		<div class= "menusor">
-		        	<a href="rolam.html" class="menuelem">Kezdőlap</a>
+		        	<a href="index.html" class="menuelem">Kezdőlap</a>
 		  			<a href="bem.html" class= "menuelem">Bemutatkozás</a>
 		  			<a href="referenciak.html" class= "menuelem class="oldalneve"">Referenciamunkák</a>
 		  			<a href="velemenyek.html" class= "menuelem class="oldalneve"">Vélemények</a>
