--- a/velemenyek.html
+++ b/velemenyek.html
@@ -38,7 +38,7 @@
 
         <summary>Szöllősi Brigitta <span class= "leiras" >Akela kutyaiskola kiképző</span></summary>
 
-        <div class="lenyilo"> <img class="profkepek" src="brigi.jpg" alt=" kép SZöllősi Brigittáról">"Számtalan közös munkán vagyunk túl és azt kell mondanom a szakmai hozzáértése és tapasztalata megkérdőjelezhetetlen. A bonyolult eseteket is higadtan kezelte és eredendő türelemmel áll a problémás kutyákhoz is. Háttértudása kifogásolhatatlan, ugyanakkor nincs elszállva magától, tudja hogy még mennyi mindent kell megtanulnia ha igazán profi szeretne lenni abban amit csinál.
+        <div class="lenyilo"> <img class="profkepek" src="brigi.jpg" alt=" kép Szöllősi Brigittáról">"Számtalan közös munkán vagyunk túl és azt kell mondanom a szakmai hozzáértése és tapasztalata megkérdőjelezhetetlen. A bonyolult eseteket is higadtan kezelte és eredendő türelemmel áll a problémás kutyákhoz is. Háttértudása kifogásolhatatlan, ugyanakkor nincs elszállva magától, tudja hogy még mennyi mindent kell megtanulnia ha igazán profi szeretne lenni abban amit csinál.
         </div>
 
       </details>
