--- a/referenciak.html
+++ b/referenciak.html
@@ -73,7 +73,7 @@
 
         <div class="referencia">
           <span class="nevek">Kyra</span><br>
-          <img src="kira.jpeg" class="refkepek">
+          <img src="Kira.jpeg" class="refkepek">
           <p class="refszoveg">Agresszív és hiperaktív kutya. Nagyon veszélyes kombináció egy hozzá nem értő számára. A gazdi már lemondott róla, hogy valaha is normális kutyája lehet, mint mindenki másnak a lakótelepen. Jelentem, kár lett volna feladni a reményt. A megoldás az volt,  hogy lekötöttük a felgyülemlett energiáit és pozitív megerősítéssel káprázatos eredményeket érrtünk el nála.</p>        
         </div>
 
