--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <main>
 
-      <img id= "kezdokep" alt= "Én és a kutyám" src= "elsolap.jpg">
+      <img id= "kezdokep" alt= "Én és a kutyám" src=>
 
       <div class= "idezet">
 
@@ -43,22 +43,22 @@
         
           <div class="kapcs">
             <img class= "kapcskepek" src="fblogo.png" alt="faceboo0"><br>
-            <a class="linkkapcs" href="https://www.facebook.com/olivka.gemesi" >Facebook</a>
+            <a class="linkkapcs" href=>Facebook</a>
           </div>
 
           <div class="kapcs">
             <img class= "kapcskepek" src="instalogo.png" alt="instagram"><br>
-            <a class="linkkapcs" href="https://www.instagram.com/gemesiolivka/">Instagram</a>
+            <a class="linkkapcs" >Instagram</a>
           </div>
 
           <div class="kapcs">
             <img class= "kapcskepek" src="gmail.png" alt="email">
-            <div class="kapcsolat"> Email: olivka.gemesi@gmail.com</div>
+            <div class="kapcsolat"> Email: </div>
           </div>
 
           <div class="kapcs">
             <img class= "kapcskepek" src="tel.png" alt="telefon">
-            <div class="kapcsolat">06205172870</div>
+            <div class="kapcsolat"></div>
           </div>
 
       </div>
