--- a/bem.html
+++ b/bem.html
@@ -24,7 +24,7 @@
 
     <main>
 
-      <img class="profil" src="profkep.jpg">
+      <img class="profil" alt = "kep rolam "src="">
 
       <div class= "bem">
 
@@ -40,23 +40,23 @@
         <div class="kapcs1">Elérhetőségek:</div>
         
         <div class="kapcs">
-          <img class= "kapcskepek" src="fblogo.png" alt="faceboo0"><br>
-          <a class="linkkapcs" href="https://www.facebook.com/olivka.gemesi" >Facebook</a>
+          <img class= "kapcskepek" src="fblogo.png" alt="facebook"><br>
+          <a class="linkkapcs" href="" >Facebook</a>
         </div>
 
         <div class="kapcs">
           <img class= "kapcskepek" src="instalogo.png" alt="instagram"><br>
-          <a class="linkkapcs" href="https://www.instagram.com/gemesiolivka/">Instagram</a>
+          <a class="linkkapcs" href="">Instagram</a>
         </div>
 
         <div class="kapcs">
           <img class= "kapcskepek" src="gmail.png" alt="email">
-          <div class="kapcsolat"> Email: olivka.gemesi@gmail.com</div>
+          <div class="kapcsolat"> Email: </div>
         </div>
 
         <div class="kapcs">
           <img class= "kapcskepek" src="tel.png" alt="telefon">
-          <div class="kapcsolat">06205172870</div>
+          <div class="kapcsolat"></div>
         </div>
 
       </div>
